package main.java.backend;

public interface Movable {

    // Otorga el comportamiento de poder moverse.
    void move(double diffX, double diffY);
}
